payer_agentforce_agents/EnrollmentServiceAgent/force-app/main/default/objects/Case/fields/Coverage_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Change_Type__c</fullName>
    <label>Coverage Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add Dependent</fullName>
            </value>
            <value>
                <fullName>Remove Dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>