payer_agentforce_agents/EnrollmentServiceAgent/force-app/main/default/objects/Case/fields/Dependent_DOB__c.field-meta.xml
<CustomField>
    <fullName>Dependent_DOB__c</fullName>
    <label>Dependent DOB</label>
    <type>Date</type>
</CustomField>