payer_agentforce_agents/EnrollmentServiceAgent/force-app/main/default/objects/Case/fields/Dependent_Gender__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Gender__c</fullName>
    <label>Dependent Gender</label>
    <length>30</length>
    <type>Text</type>
</CustomField>