payer_agentforce_agents/EnrollmentServiceAgent/force-app/main/default/objects/Case/fields/Dependent_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Name__c</fullName>
    <label>Dependent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>