payer_agentforce_agents/EnrollmentServiceAgent/force-app/main/default/objects/Case/fields/Effective_Date_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Change__c</fullName>
    <label>Effective Date of Change</label>
    <type>Date</type>
</CustomField>