payer_agentforce_agents/EnrollmentServiceAgent/force-app/main/default/objects/Case/fields/Relation_To_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Relation_To_Subscriber__c</fullName>
    <label>Relation To Subscriber</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>